--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
   "trailingSlash": false,
   "cleanUrls": true,
-  "routes": [
+  "headers": [
     {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
     }
   ]
 }
